package command;

public interface Drawable {
  public abstract void draw(int x, int y);
}
