package command;

import java.util.Stack;
import java.util.Iterator;

public class MacroCommand implements Command {
  private Stack commands = new Stack();

  public void execute(){
    Iterable it = commands.iterator();
    while(it.hasNext()){
      ((Command)it.next()).execute();
    }
  }

  public void append(Command cmd){
    if(cmd != this){
      commands.push(cmd);
    }
  }

  public void undo(){
    if(!commands.empty()){
      commands.pop();
    }
  }

  public void clear(){
    commands.clear();
  }
}
